# daytona-goose

./: .gitignore  CONTRIBUTING.MD  README.md  daytona_run_script.py  daytona_runner.py  demo.py  goose-config.yaml  pyproject.toml  requirements.txt  run_daytona.sh  simple-goose-config.yaml  test_daytona.py
docs/: architecture-diagram.md
examples/: factorial.py
src/daytona_goose/: __init__.py  daytona_executor.py  factorial.py  goose_handler.py  utils.py
